op_ghost.yaml

kind: Service
apiVersion: v1
metadata:
  labels:
    name: blog
  name: blog
spec:
  ports:
    - port: 80
      targetPort: 2368
  selector:
    app: blog
  type: LoadBalancer
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: docker.io/library/ghost
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
