test-nginx-tanzuworld.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: harbor.tanzuworld.com/openso/nginx:latest
        ports:
        - containerPort: 80
---
# This creates the K8s Service
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: nginx
  type: LoadBalancer
