todo-ui.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: todo-ui
spec:
  selector:
    matchLabels:
      app: todo-ui
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
      - name: todo-ui
        image: harbor.tanzuworld.com/tas/e56836ef-76e3-4800-8bcc-d79b1d85d674
        ports:
        - containerPort: 8080
---
# This creates the K8s Service
apiVersion: v1
kind: Service
metadata:
  name: todo-ui
  labels:
    app: todo-ui
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: todo-ui
  type: LoadBalancer
