petclinic-istio-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: petclinic-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petclinic
spec:
  hosts:
  - "*"
  gateways:
  - petclinic-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: spring-petclinic
        port:
          number: 8080
